--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,6 @@
 image:
-  file: .gitpod.dockerfile
+  file: Dockerfile
 tasks:
-  - command: >
-        perl -MCPAN -e install Moose
+  - command: perl -MCPAN -e install Moose
+  - command: echo Terminal1
+  - command: echo Terminal2
