--- a/config/apache.conf
+++ b/config/apache.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-    ServerName terra.snellman.net
-    DocumentRoot /home/jsnell/sites/terra/git/www-prod/
+    ServerName terra.boyestrous.net
+    DocumentRoot /workspace/terra-mystica/www-prod/
 
     AddDefaultCharset utf-8
 
@@ -27,8 +27,8 @@
        Header add "Cache-Control" "public, max-age=864000"
     </Location>
 
-    FastCgiServer /home/jsnell/sites/terra/git/www-prod/lib/app.fcgi -initial-env ENV=prod -initial-env TM_CONFIG= -processes 5
-    ScriptAlias /app/ "/home/jsnell/sites/terra/git/www-prod/lib/app.fcgi/"
+    FastCgiServer workspace/terra-mystica/www-prod/lib/app.fcgi -initial-env ENV=prod -initial-env TM_CONFIG= -processes 5
+    ScriptAlias /app/ "workspace/terra-mystica/www-prod/lib/app.fcgi/"
 
     ScriptLog ${APACHE_LOG_DIR}/terra-debug.log
     ErrorLog ${APACHE_LOG_DIR}/terra-error.log
