--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,21 @@
 image:
   file: Dockerfile
+ports:
+- port: 8080
+  onOpen: open-preview
 tasks:
-  - command: mkdir www-prod
-  - command: perl deploy.pl www-prod
+- name: Terminal
+  command: >
+    echo "";
+    echo "Commands you can try:";
+    echo " * apachectl stop";
+    echo " * apachectl start";
+    echo " * gp open /var/log/apache2/access.log";
+    echo " * gp open /var/log/apache2/error.log";
+    mkdir www-prod;
+    perl deploy.pl www-prod
+- name: Apache
+  command: >
+    apachectl start &&
+    multitail /var/log/apache2/access.log -I /var/log/apache2/error.log
+
