--- a/config/apache.conf
+++ b/config/apache.conf
@@ -37,4 +37,12 @@
 
     CustomLog ${APACHE_LOG_DIR}/terra-timing.log "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\" %Dusec"
 
+<IfModule mpm_prefork_module>
+StartServers          5
+MinSpareServers       5
+MaxSpareServers      10
+MaxClients          150
+MaxRequestsPerChild   0
+</IfModule>
+
 </VirtualHost>
